--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,9 @@
-@import "./reset";
+@import "config/reset";
+@import "config/colors";
 @import "font-awesome-sprockets";
 @import "./font-awesome";
-@import "massages";
-@import "side-bar";
-@import "chat-main";
-@import "user";
+@import "modules/messages";
+@import "modules/side-bar";
+@import "modules/chat-main";
+@import "modules/user";
+@import "modules/flash";
