--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -23,11 +23,11 @@
   .side-header
     .side-header__box
       .side-header__box__user-name
-        越田
+        = current_user.name
       .side-header__box__menu
         = link_to "#", class: "side-header__box__menu__new-group" do
           = icon('far', 'edit', class: "icon")
-        = link_to "#", class: "side-header__box__menu__edit-user" do
+        = link_to edit_user_path(current_user), class: "side-header__box__menu__edit-user" do
           = icon('fas', 'cog', class: "icon")
         
 
