--- a/app/assets/stylesheets/modules/_side-bar.scss
+++ b/app/assets/stylesheets/modules/_side-bar.scss
@@ -95,9 +95,11 @@
       &__name {
         font-size: 15px;
         margin-bottom: 5px;
+        color: white;
       }
       &__message {
         font-size: 11px;
+        color: white;
       }
     }
   }
