--- a/app/assets/stylesheets/modules/_chat-main.scss
+++ b/app/assets/stylesheets/modules/_chat-main.scss
@@ -70,31 +70,30 @@
   height: 90px;
   background-color: #d2d2d2;
   padding: 20px 40px;
-  display: flex;
-  .new-message {
-    width: 100%;
+  .new_message {
     display: flex;
-  }
-  .input-box {
     width: 100%;
+  }
+  
+  &__message {
+    width: 100%;
+    height: 50px;
+    padding: 0 40px 0 10px;
+    border-style: none;
+  }
+  &__mask {
     position: relative;
-    &__text {
-      width: 100%;
-      height: 50px;
-      padding: 0 40px 0 10px;
-      border-style: none;
-    }
     &__image {
       font-size: 1.3rem;
       position: absolute;
       top: 10px;
       right: 10px;
-      &__file {
-        display: none;
-      }
+    .hidden {
+      display: none;
     }
   }
-  .submit-btn {
+  }
+  &__submit {
     width: 100px;
     height: 50px;
     padding: 0 30px;
