--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -30,12 +30,11 @@
         = link_to edit_user_path(current_user), class: "side-header__box__menu__edit-user" do
           = icon('fas', 'cog', class: "icon")
         
-
   .groups
     - current_user.groups.each do |group|
       .group
-        = link_to '#' do
+        = link_to group_messages_path(group) do
           .group__name
             = group.name
           .group__message
-            メッセージはまだありません
+            = group.show_last_message
