--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -5,6 +5,6 @@
     .message__upper-info--date
       = message.created_at.strftime("%Y年%m月%d日 %H時%M分")
   .message__text
-    %p.message__text__content
+    .message__text__content
       = message.content
     = image_tag message.image.url, class: 'message__text__image' if message.image.present?
