--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,5 +1,4 @@
-.message
-%div{data:{message:{id: message.id}}}
+.message{data: {message: {id: message.id}}}
   .message__upper-info
     .message__upper-info--talker
       = message.user.name
